--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script type="text/javascript" src="%PUBLIC_URL%/config.js"></script>
 
-    <title>矿山地质环境动态监测预警系统</title>
+    <title>傲智AI视频警戒系统</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
