--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script type="text/javascript" src="%PUBLIC_URL%/config.js"></script>
-
+    <script src="https://open.ys7.com/sdk/js/1.3/ezuikit.js"></script>
     <title>傲智AI视频警戒系统</title>
   </head>
   <body>
