--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
         <span>加载中，请稍后...</span>
       </div>
     </div>
+    <script src="https://webapi.amap.com/maps?v=1.4.15&key=c51c71fd1b92b1512ec2296884d79a68&plugin=AMap.MouseTool"></script>
   </body>
 
 </html>
