--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script type="text/javascript" src="%PUBLIC_URL%/config.js"></script>
     <script src="https://open.ys7.com/sdk/js/1.3/ezuikit.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
+          integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="
+          crossorigin=""/>
     <title>傲智AI视频警戒系统</title>
   </head>
   <body>
@@ -25,7 +29,10 @@
         <span>加载中，请稍后...</span>
       </div>
     </div>
-    <script src="https://webapi.amap.com/maps?v=1.4.15&key=c51c71fd1b92b1512ec2296884d79a68&plugin=AMap.MouseTool"></script>
+    <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
+            integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="
+            crossorigin=""></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
   </body>
 
 </html>
