--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
     integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="
     crossorigin="" />
-  <link rel="stylesheet" href="./video-js.css">
-  <script src="./video.js"></script>
-  <script src="./videojs-flash.min.js"></script>
+  <link rel="stylesheet" href="%PUBLIC_URL%/video-js.css">
+  <script src="%PUBLIC_URL%/video.js"></script>
+  <script src="%PUBLIC_URL%/videojs-flash.min.js"></script>
 
   <title>傲智AI视频警戒系统</title>
 </head>
