--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,10 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script type="text/javascript" src="%PUBLIC_URL%/config.js"></script>
   <script src="https://open.ys7.com/sdk/js/1.3/ezuikit.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
     integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="
     crossorigin="" />
-
+    <script src="http://vjs.zencdn.net/ie8/1.1.1/videojs-ie8.min.js"></script>
   <title>傲智AI视频警戒系统</title>
 </head>
 
